--- a/cockpit/IPC/src/Components/Signal/Signal.css
+++ b/cockpit/IPC/src/Components/Signal/Signal.css
@@ -9,3 +9,12 @@
    justify-content: space-between;
    align-items: center;
 }
+
+.SignalText {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: flex-start;
+   width: 100%;
+   margin-right: 1rem;
+}
