Added ESLint with Airbnb rules
Added a log message when page is loaded

Changed Libray to UI-Schema for testing. Seems to work well, Waiting for issue #120 to implement using DBUS

Created custom widget with unit support, and connected to dbus

--- a/cockpit/IPC/src/Components/Alert/Alerts.css
+++ b/cockpit/IPC/src/Components/Alert/Alerts.css
@@ -16,3 +16,8 @@
 .pf-c-alert-group {
    --pf-c-alert-group__item--MarginTop: 0.3rem !important;
 }
+
+.pf-c-alert__title {
+   font-size: 0.8rem;
+   font-weight: normal;
+}
