Changed functionality of DBUS, now ready for PR #150. Added shift+enter shortcut to open filter editor

--- a/cockpit/IPC/src/Components/Table/Table.css
+++ b/cockpit/IPC/src/Components/Table/Table.css
@@ -42,7 +42,7 @@
    max-width: 3rem !important;
    padding: 8px !important;
    width: 3rem !important;
-   height: 37px !important;
+   height: 100% !important;
    margin: 0px !important;
 }
 
