First iteration of fixing Array handling. Will have to do more testing

--- a/cockpit/IPC/src/Components/Form/UnitsWidget.css
+++ b/cockpit/IPC/src/Components/Form/UnitsWidget.css
@@ -4,3 +4,6 @@
    font-size: 0.8rem;
    padding: 0rem;
 }
+.MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-colorPrimary.MuiInputBase-formControl {
+   width:100%;
+}
