Initial fix for min and max. Form validation will fail.

--- a/cockpit/IPC/src/Components/Form/UnitsWidget.css
+++ b/cockpit/IPC/src/Components/Form/UnitsWidget.css
@@ -1,5 +1,6 @@
 .RequiredText {
-   width: 3rem;
+   text-align: left;
+   max-width: 13rem;
    color: rgb(211, 47, 47);
    font-size: 0.8rem;
    padding: 0rem;
