Adding Debugging Functionality to UI (#174)
* Updated to PatternFly5, added DarkMode :)

* Fixed ListDBUS dark mode

* Changed Navbar and fixed visual glitches in chrome

* Made DarkMode follow cockpit

* Fixed visual glitches

* Changed DBUS Debugging to prepare for implementation. BROKEN

* Added DBUS connection to Debug UI

* Added fix for Configurator and Filters, based on new DBUS

* Fixed some code smells, and renamed IPC to Connections

* Fixing Number handling on DebuggingUI

--- a/cockpit/IPC/src/Components/Table/Table.css
+++ b/cockpit/IPC/src/Components/Table/Table.css
@@ -35,6 +35,16 @@
    cursor: pointer !important;
 }
 
+.darkSelectionHover:hover {
+   background-color: #666 !important;
+   cursor: pointer !important;
+}
+
+.darkSelectionHoverSignal:hover {
+   background-color: #777 !important;
+   cursor: pointer !important;
+}
+
 .smallSelectionCell {
    align-items: center !important;
    display: flex !important;
@@ -46,23 +56,30 @@
    margin: 0px !important;
 }
 
-.pf-c-table .pf-m-truncate,
-.pf-c-table thead {
+.pf-v5-c-table .pf-m-truncate,
+.pf-v5-c-table thead {
    --pf-c-table--cell--MinWidth: 2rem;
+   padding-left: 1rem !important
 }
 
-.pf-c-table td {
-   font-size: 0.95rem;
+.pf-v5-c-table__td {
+   font-size: 0.95rem !important;
+   padding: 0.2rem 0.5rem !important;
+   
 }
-.pf-c-table {
+.pf-v5-c-table {
    text-align: left;
 }
 
-.pf-c-table tr> :first-child {
+.pf-v5-c-table tr> :first-child {
    --pf-c-table--cell--PaddingLeft: 1rem;
 }
 
 
 .wideModal {
    --pf-c-modal-box--Width: 90% !important;
+}
+
+.pf-v5-c-table__td.pf-v5-c-table__check > label{
+   margin-left: 0rem !important;
 }
