--- a/cockpit/IPC/src/App.css
+++ b/cockpit/IPC/src/App.css
@@ -17,3 +17,13 @@
 .App-intro {
   font-size: large;
 }
+
+:root {
+  font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  :root {
+    font-size: 14px;
+  }
+}
