Added watch to IODebug mobile

--- a/cockpit/IPC/src/views/IODebug.css
+++ b/cockpit/IPC/src/views/IODebug.css
@@ -67,6 +67,18 @@ button.Hovr {
     min-width: 30rem;
 }
 
+.TransitionUp {
+    transition: transform 0.3s ease-in-out;
+}
+.ArrowIcons {
+    width: 32px;
+    height: 32px;
+    padding: 0.4rem;
+    border-radius: 16px;
+    background-color: #111;
+    color: #EEE
+}
+
 @media (max-width: 768px) {
     :root {
         --pf-v5-global--spacer--sm: 0.2rem !important;
