Cleaned up toolbar and added it to Debugging window

--- a/cockpit/IPC/src/Components/Table/Toolbar.css
+++ b/cockpit/IPC/src/Components/Table/Toolbar.css
@@ -22,3 +22,7 @@
 .pf-v5-c-chip-group__close {
     width: 2.5rem !important;
 }
+
+.pf-v5-c-toolbar__content.pf-m-chip-container {
+    justify-content: center;
+}
